--- a/contact.html
+++ b/contact.html
@@ -26,29 +26,39 @@
                     </a>
 
                     <!-- Update navigation menu -->
-                    <ul class="nav-menu" id="nav-menu">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="ranking.html" class="nav-link">Ranking</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="players.html" class="nav-link">Players</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="learn.html" class="nav-link">Learn</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="requirements.html" class="nav-link">Requirements</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="shop.html" class="nav-link">Shop</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
-                        </li>
-                    </ul>
+                <ul class="nav-menu" id="nav-menu">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="ranking.html" class="nav-link">Ranking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="players.html" class="nav-link">Players</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="learn.html" class="nav-link">Learn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="requirements.html" class="nav-link">Requirements</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="news.html" class="nav-link">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="gallery.html" class="nav-link">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="bonus.html" class="nav-link">Bonus</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="shop.html" class="nav-link">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+
 
 
                     <div class="nav-toggle" id="nav-toggle">
