--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
                                 class="nav-link">Requirements</a>
                         </li>
                         <li class="nav-item">
+                            <a href="news.html" class="nav-link">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="gallery.html" class="nav-link">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="bonus.html" class="nav-link">Bonus</a>
+                        </li>
+                        <li class="nav-item">
                             <a href="shop.html" class="nav-link">Shop</a>
                         </li>
                         <li class="nav-item">
@@ -68,9 +77,7 @@
                     <h1 class="hero-title">DVA Volleyball Club</h1>
                     <p class="hero-subtitle">Passion - Dedication - Victory</p>
                     <p class="hero-description">
-                        DVA Volleyball Club - Where young talents gather,
-                        where dreams are nurtured and ambitions to conquer the
-                        pinnacle of sports are born.
+                        DVA Volleyball Club - Where young talents gather
                     </p>
                     <div class="hero-buttons">
                         <a href="players.html" class="btn btn-primary">View
@@ -91,7 +98,7 @@
                 <div class="container">
                     <div class="section-header">
                         <h2>About DVA Club</h2>
-                        <p>Proud to be one of the leading volleyball clubs</p>
+
                     </div>
 
                     <div class="about-content">
@@ -105,10 +112,10 @@
                                 helping athletes maximize their potential.
                             </p>
 
-                            <h3>Vision & Mission</h3>
+                            <h3>Vision</h3>
                             <ul>
-                                <li>Training high-quality volleyball
-                                    athletes</li>
+                                <li>Building a wider Hanoi volleyball
+                                    community</li>
                                 <li>Building team spirit and sports
                                     discipline</li>
                                 <li>Actively participating in domestic and
@@ -124,7 +131,7 @@
                                 <p>Members</p>
                             </div>
                             <div class="stat-item fade-in">
-                                <h4>15+</h4>
+                                <h4>7+</h4>
                                 <p>Awards</p>
                             </div>
                             <div class="stat-item fade-in">
@@ -253,7 +260,7 @@
                                                     class="achievement-number">250+</span>
                                                 <span
                                                     class="achievement-label">Members
-                                                    Trained</span>
+                                                </span>
                                             </div>
                                         </div>
                                         <div class="achievement-item">
@@ -262,7 +269,7 @@
                                             </div>
                                             <div class="achievement-content">
                                                 <span
-                                                    class="achievement-number">15+</span>
+                                                    class="achievement-number">7+</span>
                                                 <span
                                                     class="achievement-label">Championships
                                                     Won</span>
@@ -408,8 +415,8 @@
                                         <i class="fas fa-sync-alt"></i>
                                     </div>
                                     <div class="detail-content">
-                                        <h4>5-1 Rotation System</h4>
-                                        <p>Professional volleyball rotation
+                                        <h4>5-1 & 6-2 Rotation </h4>
+                                        <p>Volleyball rotation
                                             strategy</p>
                                     </div>
                                 </div>
@@ -493,7 +500,7 @@
                                             </div>
                                             <div class="spec-item">
                                                 <i class="fas fa-medal"></i>
-                                                <span>Competition Grade</span>
+                                                <span>Training Grade</span>
                                             </div>
                                         </div>
                                     </div>
@@ -506,8 +513,7 @@
                     <div class="club-cta">
                         <div class="cta-content">
                             <h3>Ready to Join DVA Club?</h3>
-                            <p>Contact us today to reserve your spot in our
-                                training sessions</p>
+                            <p>Get in touch with us today to join DVA Club</p>
                             <div class="cta-buttons">
                                 <a href="contact.html" class="btn btn-primary">
                                     <i class="fas fa-phone"></i>
