--- a/requirements.html
+++ b/requirements.html
@@ -25,6 +25,7 @@
                         <span class="logo-text">DVA Club</span>
                     </a>
 
+                    <!-- Update navigation menu -->
                     <ul class="nav-menu" id="nav-menu">
                         <li class="nav-item">
                             <a href="index.html" class="nav-link">Home</a>
@@ -40,7 +41,16 @@
                         </li>
                         <li class="nav-item">
                             <a href="requirements.html"
-                                class="nav-link active">Requirements</a>
+                                class="nav-link">Requirements</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="news.html" class="nav-link">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="gallery.html" class="nav-link">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="bonus.html" class="nav-link">Bonus</a>
                         </li>
                         <li class="nav-item">
                             <a href="shop.html" class="nav-link">Shop</a>
