--- a/shop.html
+++ b/shop.html
@@ -25,6 +25,7 @@
                         <span class="logo-text">DVA Club</span>
                     </a>
 
+                    <!-- Update navigation menu -->
                     <ul class="nav-menu" id="nav-menu">
                         <li class="nav-item">
                             <a href="index.html" class="nav-link">Home</a>
@@ -43,7 +44,16 @@
                                 class="nav-link">Requirements</a>
                         </li>
                         <li class="nav-item">
-                            <a href="shop.html" class="nav-link active">Shop</a>
+                            <a href="news.html" class="nav-link">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="gallery.html" class="nav-link">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="bonus.html" class="nav-link">Bonus</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="shop.html" class="nav-link">Shop</a>
                         </li>
                         <li class="nav-item">
                             <a href="contact.html" class="nav-link">Contact</a>
