--- a/ranking.html
+++ b/ranking.html
@@ -44,6 +44,15 @@
                                 class="nav-link">Requirements</a>
                         </li>
                         <li class="nav-item">
+                            <a href="news.html" class="nav-link">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="gallery.html" class="nav-link">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="bonus.html" class="nav-link">Bonus</a>
+                        </li>
+                        <li class="nav-item">
                             <a href="shop.html" class="nav-link">Shop</a>
                         </li>
                         <li class="nav-item">
